--- a/03/03.html
+++ b/03/03.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gomb esemenyek</title>
 </head>
 <body>
+    <button id="uzenetGomb">Uzenet megjelenitese</button>
+    <p id="uzenet"></p>
+
     <script src="03.js"></script>
-
-    <button onclick="randomnumber()">Véletlenszám generálás</button>
-
 </body>
 </html>
